# igti-pa

./: Dockerfile  README.md  application.py  data.py  layout.py  pyproject.toml  read_csv_data.py  requirements.txt
data/if_cad/: data_dictionary_if_cad.txt
data/if_daily_report/202312/: dicionario_dados_inf_diario_fi.txt
data/if_lamina/: lamina_fi_carteira_202311.csv  meta_lamina_fi.txt  meta_lamina_fi_carteira.txt  meta_lamina_fi_rentab_ano.txt  meta_lamina_fi_rentab_mes.txt
gandarela/gandarela/: app.py  application.py  callback.py  callbacks.py  data.py  layout.py  plot_graph.py
gandarela/gandarela/services/: aws_utils.py
