[tool.poetry]
name = "gandarela"
version = "0.1.0"
description = ""
authors = ["tablit <tata.angelo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
dash = "^2.14.2"
nbformat = "^5.9.2"
python-dotenv = "^1.0.0"
boto3 = "^1.34.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
